@@ -1154,3 +1154,10 @@ Formal class 'signature' [package "methods"] with 3 slots
 + 	  c("mle", "profile.mle", "summary.mle") %in% cl4)
 > ## failed after an optimization patch
 > 
+> detach("package:methods", force=TRUE)
+> C1@slot1 <- pi
+> stopifnot(identical(C1@slot1, pi))
+> stopifnot(require("methods"))
+Loading required package: methods
+> ## Slot assignment failed in R <= 3.2.2, C code calling checkAtAssignment()
+> 
